--- a/hubmap/dataset/main.ipynb
+++ b/hubmap/dataset/main.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Demo\n",
+    "\n",
+    "Toy notebook to demonstate usage of Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -204,7 +214,15 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Train Loss: 0.09242277847671951, Train Acc: 58.6132779785904, Test Loss: 0.07131982576102018, Test Acc: 35.06456194303087\n"
+     ]
+    }
+   ],
    "source": [
     "num_epochs = 1\n",
     "train_loss = []\n",
