--- a/hubmap/dataset/main.ipynb
+++ b/hubmap/dataset/main.ipynb
@@ -21,7 +21,7 @@
     "import torch.nn as nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torchvision.transforms as transforms\n",
-    "import pandas as pd \n",
+    "import pandas as pd\n",
     "import json\n",
     "import numpy as np\n",
     "import matplotlib.patches as mpatches\n",
@@ -32,8 +32,7 @@
     "import torchvision.transforms as transforms\n",
     "from torchvision.transforms import ToTensor\n",
     "from Datasets import BaseDataset, ExpertDataset, DatasetFromSubset\n",
-    "import Transforms as tran\n",
-    "\n"
+    "import Transforms as tran"
    ]
   },
   {
@@ -42,27 +41,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#transform wie RandomXYZ führen zu Data Augmentation,\n",
-    "#weil das modell jeden epoch ein anderes bild kriegt, sollte aber dann nichtmehr fürs\n",
-    "#test set verwendet  werden. \n",
+    "# transform wie RandomXYZ führen zu Data Augmentation,\n",
+    "# weil das modell jeden epoch ein anderes bild kriegt, sollte aber dann nichtmehr fürs\n",
+    "# test set verwendet  werden.\n",
     "\n",
-    "transforms_augment = tran.Compose([\n",
-    "    tran.ToTensor(),\n",
-    "    tran.Resize((256, 256)),\n",
-    "    tran.RandomHorizontalFlip(),\n",
-    "    tran.RandomVerticalFlip(),\n",
-    "    tran.RandomGamma(), # aufpassen, die default values sind nicht gut\n",
-    "    tran.RandomHueSaturationValue(), # aufpassen, die default values sind nicht gut\n",
-    "    tran.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)) \n",
-    "])\n",
+    "transforms_augment = tran.Compose(\n",
+    "    [\n",
+    "        tran.ToTensor(),\n",
+    "        tran.Resize((256, 256)),\n",
+    "        tran.RandomHorizontalFlip(),\n",
+    "        tran.RandomVerticalFlip(),\n",
+    "        tran.RandomGamma(),  # aufpassen, die default values sind nicht gut\n",
+    "        tran.RandomHueSaturationValue(),  # aufpassen, die default values sind nicht gut\n",
+    "        tran.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "transforms_val = tran.Compose([\n",
-    "    tran.ToTensor(),\n",
-    "    tran.Resize((256, 256)),\n",
-    "    tran.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)) \n",
-    "])\n",
+    "transforms_val = tran.Compose(\n",
+    "    [\n",
+    "        tran.ToTensor(),\n",
+    "        tran.Resize((256, 256)),\n",
+    "        tran.Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "    ]\n",
+    ")\n",
     "\n",
-    "dataset = ExpertDataset('../data/')"
+    "dataset = ExpertDataset(\"../data/\")"
    ]
   },
   {
@@ -71,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hier auch wieder sehr wichtig, das Dataset mit random transformations\n",
-    "#sollte natürlich nicht zum evaluieren verwendet werden. \n",
+    "# hier auch wieder sehr wichtig, das Dataset mit random transformations\n",
+    "# sollte natürlich nicht zum evaluieren verwendet werden.\n",
     "train_ratio = 0.8\n",
     "train_size = int(train_ratio * len(dataset))\n",
     "test_size = len(dataset) - train_size\n",
@@ -105,13 +108,17 @@
     "class ResidualBlock(nn.Module):\n",
     "    def __init__(self, in_channels: int, out_channels: int):\n",
     "        super().__init__()\n",
-    "        self.conv1 = nn.Conv2d(in_channels, out_channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.conv1 = nn.Conv2d(\n",
+    "            in_channels, out_channels, kernel_size=3, stride=1, padding=1\n",
+    "        )\n",
     "        self.bn1 = nn.BatchNorm2d(out_channels)\n",
     "        self.relu = nn.ReLU(inplace=True)\n",
-    "        self.conv2 = nn.Conv2d(out_channels, out_channels, kernel_size=3, stride=1, padding=1)\n",
+    "        self.conv2 = nn.Conv2d(\n",
+    "            out_channels, out_channels, kernel_size=3, stride=1, padding=1\n",
+    "        )\n",
     "        self.bn2 = nn.BatchNorm2d(out_channels)\n",
     "\n",
-    "        self.skip = nn.Identity() \n",
+    "        self.skip = nn.Identity()\n",
     "        if in_channels != out_channels:\n",
     "            self.skip = nn.Conv2d(in_channels, out_channels, kernel_size=1)\n",
     "\n",
@@ -129,6 +136,7 @@
     "        out = self.relu(out)\n",
     "\n",
     "        return out\n",
+    "\n",
     "\n",
     "class UNet(nn.Module):\n",
     "    def __init__(self, in_channels: int, out_channels: int):\n",
@@ -215,9 +223,8 @@
     "    total = 0\n",
     "    for i, data in enumerate(train_loader, 0):\n",
     "        inputs, labels = data\n",
-    " \n",
-    "        optimizer.zero_grad()\n",
     "\n",
+    "        optimizer.zero_grad()\n",
     "\n",
     "        outputs = model(inputs)\n",
     "        loss = loss_fn(outputs, labels)\n",
@@ -225,16 +232,15 @@
     "        optimizer.step()\n",
     "\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        labels = torch.argmax(labels, dim=1) \n",
+    "        labels = torch.argmax(labels, dim=1)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "        total += torch.numel(labels)\n",
-    "        \n",
+    "\n",
     "        running_loss += loss.item()\n",
-    "        \n",
     "\n",
     "    train_accuracy.append(100 * correct / total)\n",
     "    train_loss.append(running_loss / i)\n",
-    "    \n",
+    "\n",
     "    # Testing\n",
     "    model.eval()\n",
     "    running_loss = 0.0\n",
@@ -247,17 +253,18 @@
     "        loss = loss_fn(outputs, labels)\n",
     "\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        labels = torch.argmax(labels, dim=1) \n",
+    "        labels = torch.argmax(labels, dim=1)\n",
     "        correct += (predicted == labels).sum().item()\n",
     "        total += torch.numel(labels)\n",
     "\n",
     "        running_loss += loss.item()\n",
-    "    \n",
+    "\n",
     "    test_accuracy.append(100 * correct / total)\n",
     "    test_loss.append(running_loss / i)\n",
     "\n",
-    "\n",
-    "    print(f\"Epoch {epoch+1}, Train Loss: {train_loss[-1]}, Train Acc: {train_accuracy[-1]}, Test Loss: {test_loss[-1]}, Test Acc: {test_accuracy[-1]}\")"
+    "    print(\n",
+    "        f\"Epoch {epoch+1}, Train Loss: {train_loss[-1]}, Train Acc: {train_accuracy[-1]}, Test Loss: {test_loss[-1]}, Test Acc: {test_accuracy[-1]}\"\n",
+    "    )"
    ]
   }
  ],
