--- a/hubmap/experiments/fct.ipynb
+++ b/hubmap/experiments/fct.ipynb
@@ -434,6 +434,7 @@
    "source": [
     "# # Quick test for random input.\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "pred = model(torch.rand(size=(1, 3, IMG_DIM, IMG_DIM)).to(device))\n",
     "plt.imshow(pred[2].squeeze().permute(1, 2, 0).detach().cpu())\n",
     "assert pred[2].size() == torch.Size([1, 3, IMG_DIM, IMG_DIM])"
@@ -457,7 +458,9 @@
     "# criterion = BCEDiceLoss()\n",
     "# interpolate_strategy one of:\n",
     "# 'nearest' | 'linear' | 'bilinear' | 'bicubic' | 'trilinear' | 'area' | 'nearest-exact'.\n",
-    "criterion = MultiOutputBCELoss(weights=[0.14, 0.29, 0.57], interpolation_strategy=\"bilinear\")\n",
+    "criterion = MultiOutputBCELoss(\n",
+    "    weights=[0.14, 0.29, 0.57], interpolation_strategy=\"bilinear\"\n",
+    ")\n",
     "# WE ARE ONLY INTERESTED IN THE IoU OF THE BLOOD VESSEL CLASS FOR NOW.\n",
     "benchmark = IoU(class_index=0)"
    ]
@@ -644,7 +647,7 @@
     "    checkpoint_name=\"fct_trials\",\n",
     "    learning_rate_scheduler=lr_scheduler,\n",
     "    loss_out_index=None,\n",
-    "    benchmark_out_index=2\n",
+    "    benchmark_out_index=2,\n",
     ")"
    ]
   },
