--- a/hubmap/models/linknet.ipynb
+++ b/hubmap/models/linknet.ipynb
@@ -13,17 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -488,9 +484,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hubmap-nJ1voaj--py3.11",
+   "name": "cv",
    "language": "python",
-   "name": "python3"
+   "display_name": "cv"
   },
   "language_info": {
    "codemirror_mode": {
