--- a/hubmap/dataset/main.ipynb
+++ b/hubmap/dataset/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,9 +68,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "422"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#hier auch wieder sehr wichtig, das Dataset mit random transformations\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#sollte natürlich nicht zum evaluieren verwendet werden. \u001b[39;00m\n\u001b[1;32m      3\u001b[0m train_ratio \u001b[39m=\u001b[39m \u001b[39m0.8\u001b[39m\n\u001b[0;32m----> 4\u001b[0m train_size \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(train_ratio \u001b[39m*\u001b[39m \u001b[39mlen\u001b[39m(dataset))\n\u001b[1;32m      5\u001b[0m test_size \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(dataset) \u001b[39m-\u001b[39m train_size\n\u001b[1;32m      6\u001b[0m train_dataset_sub, test_dataset_sub \u001b[39m=\u001b[39m random_split(dataset, [train_size, test_size])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#hier auch wieder sehr wichtig, das Dataset mit random transformations\n",
     "#sollte natürlich nicht zum evaluieren verwendet werden. \n",
@@ -88,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,14 +223,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1, Train Loss: 0.12431739306166059, Train Acc: 14.171752024121384, Test Loss: 0.1576853185892105, Test Acc: 2.339764763327206\n"
+      "Epoch 1, Train Loss: 0.12951165047429858, Train Acc: 2.6030588574508533, Test Loss: 0.1682716891169548, Test Acc: 1.9363762350643383\n"
      ]
     }
    ],
@@ -278,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
