--- a/hubmap/dataset/background_test.ipynb
+++ b/hubmap/dataset/background_test.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Datasets import BaseDataset, ExpertDataset, DatasetFromSubset\n",
-    "import Transforms as tran"
+    "from datasets import BaseDataset, ExpertDataset, DatasetFromSubset\n",
+    "import transforms as tran"
    ]
   },
   {
