--- a/hubmap/dataset/background_test.ipynb
+++ b/hubmap/dataset/background_test.ipynb
@@ -123,7 +123,15 @@
     "target_argmax = target.argmax(dim=0)\n",
     "target_np = target_argmax.numpy()\n",
     "\n",
-    "image_label_overlay = label2rgb(target_np, image=None, bg_label=3, colors=[\"red\", \"blue\", \"yellow\"], kind=\"overlay\", saturation=1.0, alpha=0.3)\n",
+    "image_label_overlay = label2rgb(\n",
+    "    target_np,\n",
+    "    image=None,\n",
+    "    bg_label=3,\n",
+    "    colors=[\"red\", \"blue\", \"yellow\"],\n",
+    "    kind=\"overlay\",\n",
+    "    saturation=1.0,\n",
+    "    alpha=0.3,\n",
+    ")\n",
     "\n",
     "plt.imshow(image_label_overlay)"
    ]
