added new model TransResUNet

--- a/hubmap/dataset/split_data.ipynb
+++ b/hubmap/dataset/split_data.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta_df = pd.read_csv('../data/tile_meta.csv')"
+    "meta_df = pd.read_csv(\"../data/tile_meta.csv\")"
    ]
   },
   {
@@ -48,7 +48,7 @@
    ],
    "source": [
     "print(len(d1_ids))\n",
-    "print(len(d2_ids))\n"
+    "print(len(d2_ids))"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_images = random.sample(d1_ids, count_test)\n"
+    "test_images = random.sample(d1_ids, count_test)"
    ]
   },
   {
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "d1_ids_leftover = [id for id in d1_ids if id not in test_images]\n",
-    "merged_ids = d1_ids_leftover + d2_ids\n"
+    "merged_ids = d1_ids_leftover + d2_ids"
    ]
   },
   {
@@ -149,14 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_directory = '../data/all_images'\n",
-    "train_directory = '../data/train'\n",
-    "test_directory = '../data/test'\n",
-    "val_directory = '../data/val'\n",
+    "src_directory = \"../data/all_images\"\n",
+    "train_directory = \"../data/train\"\n",
+    "test_directory = \"../data/test\"\n",
+    "val_directory = \"../data/val\"\n",
     "\n",
     "os.makedirs(train_directory, exist_ok=True)\n",
     "os.makedirs(test_directory, exist_ok=True)\n",
-    "os.makedirs(val_directory, exist_ok=True)\n"
+    "os.makedirs(val_directory, exist_ok=True)"
    ]
   },
   {
@@ -167,8 +167,8 @@
    "source": [
     "def copy_images(images, dest_directory):\n",
     "    for image_id in images:\n",
-    "        src_path = os.path.join(src_directory, str(image_id) + '.tif')\n",
-    "        dest_path = os.path.join(dest_directory, str(image_id) + '.tif')\n",
+    "        src_path = os.path.join(src_directory, str(image_id) + \".tif\")\n",
+    "        dest_path = os.path.join(dest_directory, str(image_id) + \".tif\")\n",
     "        shutil.copy(src_path, dest_path)"
    ]
   },
