copy train and util into ducknet folder

--- a/hubmap/experiments/DUCKNet/ducknet_pretrained.ipynb
+++ b/hubmap/experiments/DUCKNet/ducknet_pretrained.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Experiment Pipeline DUCKNet"
+    "# Experiment Pipeline DUCKNet Pretrained"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "from hubmap.training import LRScheduler\n",
     "from hubmap.training import EarlyStopping\n",
     "\n",
-    "from hubmap.models.ducknet import DUCKNet\n",
+    "from hubmap.models.ducknet import DUCKNetPretrained\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from hubmap.visualization import visualize_result\n",
