trainings and results

--- a/hubmap/experiments/DUCKNet/ducknet_pretrained.ipynb
+++ b/hubmap/experiments/DUCKNet/ducknet_pretrained.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "#loss and metric functions\n",
     "from hubmap.experiments.DUCKNet.utils import run\n",
-    "from hubmap.experiments.DUCKNet.utils import DiceBCELoss\n",
+    "from hubmap.experiments.DUCKNet.utils import DiceBCELoss, DiceLoss\n",
     "from hubmap.experiments.DUCKNet.utils import visualize_detailed_results\n",
     "from hubmap.experiments.DUCKNet.utils import visualize_detailed_results_overlay\n",
     "\n",
