--- a/hubmap/experiments/linknet/new_linknet.ipynb
+++ b/hubmap/experiments/linknet/new_linknet.ipynb
@@ -9,22 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Device is:  cuda\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\gulBa\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\hubmap-nJ1voaj--py3.11\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'IoULoss' from 'hubmap.losses' (D:\\Master\\ComputerVision\\HuBMAP\\hubmap\\losses\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 24\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhubmap\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexperiments\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mTransResUNet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize_detailed_results\n\u001b[0;32m     21\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhubmap\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mexperiments\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mTransResUNet\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mutils\u001b[39;00m \u001b[39mimport\u001b[39;00m visualize_detailed_results_overlay\n\u001b[1;32m---> 24\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhubmap\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlosses\u001b[39;00m \u001b[39mimport\u001b[39;00m BCEDiceLoss, IoULoss, DiceLoss\n\u001b[0;32m     25\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhubmap\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m IoU\n\u001b[0;32m     28\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mhubmap\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtraining\u001b[39;00m \u001b[39mimport\u001b[39;00m LRScheduler\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'IoULoss' from 'hubmap.losses' (D:\\Master\\ComputerVision\\HuBMAP\\hubmap\\losses\\__init__.py)"
      ]
     }
    ],
@@ -52,7 +48,7 @@
     "from hubmap.experiments.TransResUNet.utils import visualize_detailed_results_overlay\n",
     "\n",
     "\n",
-    "from hubmap.losses import BCEDiceLoss, IoULoss, DiceLoss\n",
+    "from hubmap.losses import BCEDiceLoss, IoULoss\n",
     "from hubmap.metrics import IoU\n",
     "\n",
     "\n",
